Update footer and nap mod

--- a/index.html
+++ b/index.html
@@ -258,99 +258,142 @@
     </div>
     <!-- News, Announcements, and Products -->
     <main class="row nap">
-      <div class="col-md-4 col-md-offset-2 box">
-          <h4 class="title">News<img class="img-responsive" src="assets/indicator-dots.png" align="right"></img></h4>
-          <div class="row">
-            <div class="col-md-6 col1">
-              <img class="img-responsive" src="assets/Jan-29.png">
-            </div>
-            <div class="col-md-5 col2">
-              <p class="headln">Lorem ipsum dolor sit amet</p>
-              <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
-              <p class="headln">Read More <i class="fa fa-caret-right"></i></p>
-            </div>
+      <div class="col-md-1 blank-nap"></div>
+      <div class="col-md-5 box">
+        <p class="title">News<img class="img-responsive pull-right" src="assets/indicator-dots.png"></img></p>
+        <div class="row">
+          <div class="col-md-6 col1">
+            <img class="img-responsive" src="assets/Jan-29.png">
           </div>
-          <div class="row">
-            <div class="col-md-6 col1">
-              <img class="img-responsive" src="assets/Feb-15.png">
-            </div>
-            <div class="col-md-5 col2">
-              <p class="headln">Lorem ipsum dolor sit amet</p>
-              <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
-              <p class="headln">Read More <i class="fa fa-caret-right"></i></p>
-            </div>
+          <div class="col-md-4 col2">
+            <p class="headln">Lorem ipsum dolor sit amet</p>
+            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+            <p class="read-more">Read More <i class="fa fa-caret-right"></i></p>
           </div>
-          <div class="row">
-            <div class="col-md-6 col1">
-              <img class="img-responsive" src="assets/Mar-2.png">
-            </div>
-            <div class="col-md-5 col2">
-              <p class="headln">Lorem ipsum dolor sit amet</p>
-              <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
-              <p class="headln">Read More <i class="fa fa-caret-right"></i></p>
-            </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6 col1">
+            <img class="img-responsive" src="assets/Feb-15.png">
           </div>
-          <button class="btn-view-all btn-default btn-block" role="button">View All</button>
+          <div class="col-md-4 col2">
+            <p class="headln">Lorem ipsum dolor sit amet</p>
+            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+            <p class="read-more">Read More <i class="fa fa-caret-right"></i></p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6 col1">
+            <img class="img-responsive" src="assets/Mar-2.png">
+          </div>
+          <div class="col-md-4 col2">
+            <p class="headln">Lorem ipsum dolor sit amet</p>
+            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+            <p class="read-more">Read More <i class="fa fa-caret-right"></i></p>
+          </div>
+        </div>
+        <button class="btn-view-all btn-default btn-block" role="button">View All</button>
       </div>
-      <!-- do not know why box is around entire col-md-3 -->
-      <div class="col-md-3">
+      <div class="col-md-4">
         <div class="row box">
           <div class="col-md-12">
-           <h4 class="title-announce">Announcements<img class="img-responsive" src="assets/indicator-dots.png" align="right"></img></h4>
-           <p class="headln">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-           <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-           <p class="headln">Read More <i class="fa fa-caret-right"></i></p>
-           <div class="border-line"></div>
-           <p class="headln">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-           <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-           <p class="headln">Read More <i class="fa fa-caret-right"></i></p>
-         </div>
+            <p class="title-announce">Announcements
+            <img class="img-responsive pull-right" src="assets/indicator-dots.png"></img></p>
+            <p class="headln">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+            <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+            <p class="read-more">Read More <i class="fa fa-caret-right"></i></p>
+            <div class="border-line"></div>
+            <p class="headln">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+            <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+            <p class="read-more">Read More <i class="fa fa-caret-right"></i></p>
+          </div>
         </div>
         <div class="row box top-buffer">
-          <div class="col-md-7">
-            <h4 class="title">Products</h4>
-            <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
-            <p class="headln">Read More <i class="fa fa-caret-right"></i></a></p>
+          <div class="col-md-7 products">
+            <p class="title-prod">Products</p>
+            <p class="text prod-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
+            <p class="read-more">Read More <i class="fa fa-caret-right"></i></a></p>
           </div>
-       </div>
-     </div>
-  </main>
-
+        </div>
+      </div>
+    </main>
     <!-- Footer -->
     <footer>
+      <div class="col-md-1 blank-column"></div>
       <div class="row footer-top">
-        <div class="col-md-2 col-md-offset-2 about">
-          <h4 class="title-nortsea">NortSea About</h4>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nos trud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
-          <p><a class="read-more" href="#">Read More  <i class="fa fa-caret-right"></i></a></p>
+        <div class="col-md-2 about">
+          <h4>NortSea About</h4>
+          <p><a class="text" href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nos trud exercitation ullamco laboris nisi ut aliquip ex ea commodo </a></p>
+          <a class="text" href="#">Read More  <i class="fa fa-caret-right"></i></a>
         </div>
         <div class="col-md-2 hotel">
-          <h4 class="title-nortsea">NortSea Hotel</h4>
+          <h4>NortSea Hotel</h4>
           <ul class="footer-col2-list">
-            <li><a href="#">About Us</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a class="text" href="#">About Us</a></li>
+            <li><a class="text" href="#">Services</a></li>
+            <li><a class="text" href="#">Contact</a></li>
           </ul>
         </div>
         <div class="col-md-2 contact-us">
-          <h4 class="title-nortsea">Contact Us</h4>
-          <ul class="footer-col3-list">
-            <li><i class="fa fa-map-marker" aria-hidden="true">  Address: </i><a class="footer-address" href="#">1100 Pico Blvd Santa Monica, CA 90405 United States</a></li>
-            <li><i class="fa fa-phone" aria-hidden="true">  Phone: </i><a class="footer-address" href="#">+4401233123208"</a></li>
-            <li><i class="fa fa-send" aria-hidden="true"> Email: </i><a class="footer-support" href="#">support@nortsea.com</a></li>
-            <li><i class="fa fa-compass" aria-hidden="true"> GPS: </i><a class="footer-contact-location" href="#">10.021211-118.469009</a></li>
-          </ul>
-        </div>
-        <div class="col-md-2">
-          <img src="assets/logo-footer_360.png"></img>
-        </div>
-        <div class="row bar">
-          <div class="copyright">
-            <p>Copyright @2015 NORTSEA | About NORTSEA | Contact Support</p>
+          <h4>Contact Us</h4>
+          <div class="row address">
+            <div class="col-md-1 icon">
+              <p><i class="fa fa-map-marker" aria-hidden="true"></i></p>
+            </div>
+            <div class="col-md-2 contact-type">
+              <p href="#">Address:</p>
+            </div>
+            <div class="col-md-7 information">
+              <p href="#">1100 Pico Blvd<br>Santa Monica, CA 90405<br>United States</p>
+            </div>
+          </div>
+          <div><p class="border-line"></p></div>
+          <div class="row phone">
+            <div class="col-md-1 icon">
+              <p><i class="fa fa-phone" aria-hidden="true"></i></p>
+            </div>
+            <div class="col-md-2 contact-type">
+              <p href="#">Phone:</p>
+            </div>
+            <div class="col-md-7 information">
+              <p href="#">+4401233123208</p>
+            </div>
+          </div>
+          <div><p class="border-line"></p></div>
+          <div class="row email">
+            <div class="col-md-1 icon">
+              <p><i class="fa fa-send" aria-hidden="true"></i></p>
+            </div>
+            <div class="col-md-2 contact-type">
+              <p href="#">Email:</p>
+            </div>
+            <div class="col-md-7 information">
+              <p href="#">support@nortsea.com</p>
+            </div>
+          </div>
+          <div><p class="border-line"></p></div>
+          <div class="row gps">
+            <div class="col-md-1 icon">
+              <p><i class="fa fa-compass" aria-hidden="true"></i></p>
+            </div>
+            <div class="col-md-2 contact-type">
+              <p class="contact-type" href="#">GPS:</p>
+            </div>
+            <div class="col-md-8 information">
+              <p href="#">10.021211-118.469009</p>
+            </div>
           </div>
         </div>
-        <div class="copyright pull-right">
-          <p>Designed by Faith34</p>
+        <div class="col-md-2 logo">
+          <img class="center-block" src="assets/logo-footer_360.png"></img>
+        </div>
+      </div>
+      <div class="row bar">
+        <div class="col-md-1 blank-column"></div>
+        <div class="col-md-5">
+          <div class="copyright pull-left">Copyright @2015 NORTSEA | About NORTSEA | Contact Support</div>
+        </div>
+        <div class="col-md-4">
+          <div class="designer pull-right">Designed by Faith34</div>
         </div>
       </div>
     </footer>
