--- a/pages/05-products.html
+++ b/pages/05-products.html
@@ -14,113 +14,127 @@
   <div class="container-fluid">
     <!-- Product Banner -->
     <div class="row about-us-back">
-      <div class="col-md-1"></div>
-      <div class="col-md-7">
+      <div class="col-md-2"></div>
+      <div class="col-md-4">
         <h1 class="text-left left-title">Products</h1>
       </div>
-      <div class="col-md-3">
+      <div class="col-md-4">
         <p class="text-right">Home / Pages / Products</p>
       </div>
+      <div class="col-md-2"></div>
     </div>
     <div class="row about-us-back">
       <div class="col-md-2"></div>
-      <div class="col-md-8">
+      <div class="col-md-6">
         <img class="img-responsive image-center" src="../assets/about-us-img.png">
       </div>
-      <div class="col-md-2"></div>
+      <div class="col-md-4"></div>
     </div>
     <div class="row about-us-back black-space-products">
       <div class="col-md-12"></div>
     </div>
-
     <!--products-gallery-->
-    <div class="row-gallery"id="row-gallery">
-      <h1>Products</h1>
+    <div class="row-gallery">
+      <div class="col-md-2 gutter"></div>
+        <h1>Products</h1>
     </div>
-    <div class="col-md-1"></div>
-    <div class="col-md-11">
-        <div class="row-image-button" id="image-button">
-          <button type="button" class="btn-basic btn-sm">All</button>
-          <button type="button" class="btn-basic btn-sm">Lorem</button>
-          <button type="button" class="btn-basic btn-sm">Lorem</button>
-          <button type="button" class="btn-basic btn-sm">Lorem</button>
-          <button type="button" class="btn-basic btn-sm">Lorem</button>
-          <div class="right-button" id="right-button">
-          <button type="button" class="btn-basic btn-sm"> < </button>
-          <button type="button" class="btn-basic btn-sm"> > </button>
+    <div class="row">
+      <div class="col-md-2 gutter"></div>
+      <div class="col-md-8">
+        <div class="row-image-button">
+          <button type="button" class="btn-basic btn-sm-gold">All</button>
+          <button type="button" class="btn-basic btn-sm-prd">Lorem</button>
+          <button type="button" class="btn-basic btn-sm-prd">Lorem</button>
+          <button type="button" class="btn-basic btn-sm-prd">Lorem</button>
+          <button type="button" class="btn-basic btn-sm-prd">Lorem</button>
+          <div class="right-button">
+            <button type="button" class="btn-basic btn-sm"> < </button>
+            <button type="button" class="btn-basic btn-sm"> > </button>
+          </div>
         </div>
       </div>
     </div>
     <div class="row-gallery-1">
-      <div class="col-md-1"></div>
-      <div class="col-md-2">
-        <img src="../assets/gray-square-background.png" class="img-responsive">
-        <img src="../assets/about-us-img.png" class="img-responsive blank-img">
-      </div>
-      <div class="col-md-2">
-        <img src="../assets/gray-square-background.png" class="img-responsive">
-        <img src="../assets/about-us-img.png" class="img-responsive blank-img">
-      </div>
-      <div class="col-md-2">
-        <img src="../assets/gray-square-background.png" class="img-responsive">
-        <img src="../assets/about-us-img.png" class="img-responsive blank-img">
-      </div>
-      <div class="col-md-2">
-        <img src="../assets/gray-square-background.png" class="img-responsive">
-        <img src="../assets/about-us-img.png" class="img-responsive blank-img">
-      </div>
-      <div class="col-md-2">
-        <img src="../assets/gray-square-background.png" class="img-responsive">
-        <img src="../assets/about-us-img.png" class="img-responsive blank-img">
-      </div>
-    </div>
-    <div class="row-gallery-1">
-      <div class="col-md-1"></div>
-      <div class="col-md-2">
-        <img src="../assets/gray-square-background.png" class="img-responsive">
-        <img src="../assets/about-us-img.png" class="img-responsive blank-img">
-      </div>
-      <div class="col-md-2">
-        <img src="../assets/gray-square-background.png" class="img-responsive">
-        <img src="../assets/about-us-img.png" class="img-responsive blank-img">
-      </div>
-      <div class="col-md-2">
-        <img src="../assets/gray-square-background.png" class="img-responsive">
-        <img src="../assets/about-us-img.png" class="img-responsive blank-img">
-      </div>
-      <div class="col-md-2">
-        <img src="../assets/gray-square-background.png" class="img-responsive">
-        <img src="../assets/about-us-img.png" class="img-responsive blank-img">
-      </div>
-      <div class="col-md-2">
-        <img src="../assets/gray-square-background.png" class="img-responsive">
-        <img src="../assets/about-us-img.png" class="img-responsive blank-img">
+      <div class="col-md-2 gutter"></div>
+      <div class="col-md-8">
+        <div class="row">
+          <div class="col-md-2 col-width">
+            <img src="../assets/gray-square-background.png" class="img-responsive">
+            <img src="../assets/about-us-img.png" class="img-responsive blank-img">
+          </div>
+          <div class="col-md-2 col-width">
+            <img src="../assets/gray-square-background.png" class="img-responsive">
+            <img src="../assets/about-us-img.png" class="img-responsive blank-img">
+          </div>
+          <div class="col-md-2 col-width">
+            <img src="../assets/gray-square-background.png" class="img-responsive">
+            <img src="../assets/about-us-img.png" class="img-responsive blank-img">
+          </div>
+          <div class="col-md-2 col-width">
+            <img src="../assets/gray-square-background.png" class="img-responsive">
+            <img src="../assets/about-us-img.png" class="img-responsive blank-img">
+          </div>
+          <div class="col-md-2 col-width">
+            <img src="../assets/gray-square-background.png" class="img-responsive">
+            <img src="../assets/about-us-img.png" class="img-responsive blank-img">
+          </div>
+        </div>
       </div>
     </div>
     <div class="row-gallery-1">
-      <div class="col-md-1"></div>
-      <div class="col-md-2">
-        <img src="../assets/gray-square-background.png" class="img-responsive">
-        <img src="../assets/about-us-img.png" class="img-responsive blank-img">
-      </div>
-      <div class="col-md-2">
-        <img src="../assets/gray-square-background.png" class="img-responsive">
-        <img src="../assets/about-us-img.png" class="img-responsive blank-img">
-      </div>
-      <div class="col-md-2">
-        <img src="../assets/gray-square-background.png" class="img-responsive">
-        <img src="../assets/about-us-img.png" class="img-responsive blank-img">
-      </div>
-      <div class="col-md-2">
-        <img src="../assets/gray-square-background.png" class="img-responsive">
-        <img src="../assets/about-us-img.png" class="img-responsive blank-img">
-      </div>
-      <div class="col-md-2">
-        <img src="../assets/gray-square-background.png" class="img-responsive">
-        <img src="../assets/about-us-img.png" class="img-responsive blank-img">
+      <div class="col-md-2 gutter"></div>
+      <div class="col-md-8">
+        <div class="row">
+          <div class="col-md-2 col-width">
+            <img src="../assets/gray-square-background.png" class="img-responsive">
+            <img src="../assets/about-us-img.png" class="img-responsive blank-img">
+          </div>
+          <div class="col-md-2 col-width">
+            <img src="../assets/gray-square-background.png" class="img-responsive">
+            <img src="../assets/about-us-img.png" class="img-responsive blank-img">
+          </div>
+          <div class="col-md-2 col-width">
+            <img src="../assets/gray-square-background.png" class="img-responsive">
+            <img src="../assets/about-us-img.png" class="img-responsive blank-img">
+          </div>
+          <div class="col-md-2 col-width">
+            <img src="../assets/gray-square-background.png" class="img-responsive">
+            <img src="../assets/about-us-img.png" class="img-responsive blank-img">
+          </div>
+          <div class="col-md-2 col-width">
+            <img src="../assets/gray-square-background.png" class="img-responsive">
+            <img src="../assets/about-us-img.png" class="img-responsive blank-img">
+          </div>
+        </div>
       </div>
     </div>
-  </div> <!---closing container-fluid--->
-
+    <div class="row-gallery-1">
+      <div class="col-md-2 gutter"></div>
+      <div class="col-md-8">
+        <div class="row">
+          <div class="col-md-2 col-width">
+            <img src="../assets/gray-square-background.png" class="img-responsive">
+            <img src="../assets/about-us-img.png" class="img-responsive blank-img">
+          </div>
+          <div class="col-md-2 col-width">
+            <img src="../assets/gray-square-background.png" class="img-responsive">
+            <img src="../assets/about-us-img.png" class="img-responsive blank-img">
+          </div>
+          <div class="col-md-2 col-width">
+            <img src="../assets/gray-square-background.png" class="img-responsive">
+            <img src="../assets/about-us-img.png" class="img-responsive blank-img">
+          </div>
+          <div class="col-md-2 col-width">
+            <img src="../assets/gray-square-background.png" class="img-responsive">
+            <img src="../assets/about-us-img.png" class="img-responsive blank-img">
+          </div>
+          <div class="col-md-2 col-width">
+            <img src="../assets/gray-square-background.png" class="img-responsive">
+            <img src="../assets/about-us-img.png" class="img-responsive blank-img">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div <!---closing container-fluid--->
 </body>
 </html>
