--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           </ul>
         </div>
       </div>
-      <div class="col-md-1 person">
+      <div class="col-md-1 person-box">
         <p>Person</p>
         <div class="btn-group-person">
           <button type="button" class="btn btn-default">1</button>
@@ -104,7 +104,7 @@
           </ul>
         </div>
       </div>
-      <div class="col-md-1 child">
+      <div class="col-md-1 child-box">
         <p>Child</p>
         <div class="btn-group-child">
           <button type="button" class="btn btn-default">1</button>
@@ -119,7 +119,7 @@
           </ul>
         </div>
       </div>
-      <div class="col-md-1 day">
+      <div class="col-md-1 day-box">
         <p>Day</p>
         <div class="btn-group-day">
           <button type="button" class="btn btn-default">1</button>
