Modify font colors and margins

--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@
             <p class="read-more">Read More <i class="fa fa-caret-right"></i></p>
           </div>
         </div>
-        <button class="btn-view-all btn-default btn-block" role="button">View All</button>
+        <button class="btn-view-all btn-default btn-block" role="button">View All<i class="fa fa-angle-right"></i></button>
       </div>
       <div class="col-md-4">
         <div class="row box">
@@ -311,7 +311,7 @@
           <div class="col-md-7 products">
             <p class="title-prod">Products</p>
             <p class="text prod-p">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
-            <p class="read-more">Read More <i class="fa fa-caret-right"></i></a></p>
+            <p class="read-more read-more-blue">Read More <i class="fa fa-caret-right"></i></a></p>
           </div>
         </div>
       </div>
