right angle added to view button

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
               <p class="headln">Read More <i class="fa fa-caret-right"></i></p>
             </div>
           </div>
-          <button class="btn-view-all btn-default btn-block" role="button">View All</button>
+          <button class="btn-view-all btn-default btn-block" role="button">View All<i class="fa fa-angle-right"></i></button>
       </div>
       <!-- do not know why box is around entire col-md-3 -->
       <div class="col-md-3">
