final res mod!!!!!

--- a/index.html
+++ b/index.html
@@ -68,11 +68,11 @@
       <div class="col-md-2 gutter"></div>
       <div class="col-md-1 arrival">
         <p>Arrival</p>
-        <input type="text" class="input-box" placeholder="16.07.2015"><i class="fa fa-calendar"></i>
+        <input type="text" class="input-box" placeholder="16.07.2015"><img class="fa-calendar" src="assets/calendar-icon.png">
       </div>
       <div class="col-md-1 going">
         <p>Going</p>
-        <input type="text" class="input-box" placeholder="16.07.2015"><i class ="fa fa-calendar"></i>
+        <input type="text" class="input-box" placeholder="16.07.2015"><img class="fa-calendar" src="assets/calendar-icon.png">
       </div>
       <div class="col-md-1 room">
         <p>Room</p>
