Final-final res mod fixes

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <input type="text" class="input-box" placeholder="16.07.2015"><img class="fa-calendar" src="assets/calendar-icon.png">
       </div>
       <div class="col-md-1 room">
-        <p>Room</p>
+        <p class="rm-align">Room</p>
         <div class="btn-group-room">
           <button type="button" class="btn btn-default">1</button>
           <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -90,7 +90,7 @@
         </div>
       </div>
       <div class="col-md-1 person-box">
-        <p>Person</p>
+        <p class="person-align">Person</p>
         <div class="btn-group-person">
           <button type="button" class="btn btn-default">1</button>
           <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -105,7 +105,7 @@
         </div>
       </div>
       <div class="col-md-1 child-box">
-        <p>Child</p>
+        <p class="child-align">Child</p>
         <div class="btn-group-child">
           <button type="button" class="btn btn-default">1</button>
           <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -120,7 +120,7 @@
         </div>
       </div>
       <div class="col-md-1 day-box">
-        <p>Day</p>
+        <p class="day-align">Day</p>
         <div class="btn-group-day">
           <button type="button" class="btn btn-default">1</button>
           <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
