Update footer and nap section

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
           </ul>
           <ul class="nav navbar-nav">
             <li><a class="active" href="#">Home</a></li>
-            <li><a href="#">About Us</a></li>
-            <li class="dropdown"><a href="#">Services <span class="caret"></span></a></li>
-            <li><a href="#">Products <span class="caret"></span></a></li>
-            <li><a href="#">Gallery</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="pages/02-about-us.html">About Us</a></li>
+            <li class="dropdown"><a href="pages/09-services.html">Services <span class="caret"></span></a></li>
+            <li><a href="pages/05-products.html">Products <span class="caret"></span></a></li>
+            <li><a href="pages/04-gallery.html">Gallery</a></li>
+            <li><a href="pages/03-contact.html">Contact</a></li>
             <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
           </ul>
         </nav>
@@ -258,14 +258,14 @@
     </div>
     <!-- News, Announcements, and Products -->
     <main class="row nap">
-      <div class="col-md-1 blank-nap"></div>
+      <div class="col-md-2"></div>
       <div class="col-md-5 box">
         <p class="title">News<img class="img-responsive pull-right" src="assets/indicator-dots.png"></img></p>
         <div class="row">
           <div class="col-md-6 col1">
             <img class="img-responsive" src="assets/Jan-29.png">
           </div>
-          <div class="col-md-4 col2">
+          <div class="col-md-6 col2">
             <p class="headln">Lorem ipsum dolor sit amet</p>
             <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
             <p class="read-more">Read More <i class="fa fa-caret-right"></i></p>
@@ -275,7 +275,7 @@
           <div class="col-md-6 col1">
             <img class="img-responsive" src="assets/Feb-15.png">
           </div>
-          <div class="col-md-4 col2">
+          <div class="col-md-6 col2">
             <p class="headln">Lorem ipsum dolor sit amet</p>
             <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
             <p class="read-more">Read More <i class="fa fa-caret-right"></i></p>
@@ -285,7 +285,7 @@
           <div class="col-md-6 col1">
             <img class="img-responsive" src="assets/Mar-2.png">
           </div>
-          <div class="col-md-4 col2">
+          <div class="col-md-6 col2">
             <p class="headln">Lorem ipsum dolor sit amet</p>
             <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
             <p class="read-more">Read More <i class="fa fa-caret-right"></i></p>
@@ -293,7 +293,7 @@
         </div>
         <button class="btn-view-all btn-default btn-block" role="button">View All<i class="fa fa-angle-right"></i></button>
       </div>
-      <div class="col-md-4">
+      <div class="col-md-3">
         <div class="row box">
           <div class="col-md-12">
             <p class="title-announce">Announcements
@@ -318,19 +318,19 @@
     </main>
     <!-- Footer -->
     <footer>
-      <div class="col-md-1 blank-column"></div>
       <div class="row footer-top">
+      <div class="col-md-2"></div>
         <div class="col-md-2 about">
           <h4>NortSea About</h4>
-          <p><a class="text" href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nos trud exercitation ullamco laboris nisi ut aliquip ex ea commodo </a></p>
+          <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nos trud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
           <a class="text" href="#">Read More  <i class="fa fa-caret-right"></i></a>
         </div>
         <div class="col-md-2 hotel">
           <h4>NortSea Hotel</h4>
           <ul class="footer-col2-list">
-            <li><a class="text" href="#">About Us</a></li>
-            <li><a class="text" href="#">Services</a></li>
-            <li><a class="text" href="#">Contact</a></li>
+            <li><a class="text" href="pages/02-about-us.html">About Us</a></li>
+            <li><a class="text" href="pages/09-services.html">Services</a></li>
+            <li><a class="text" href="pages/03-contact.html">Contact</a></li>
           </ul>
         </div>
         <div class="col-md-2 contact-us">
@@ -388,9 +388,9 @@
         </div>
       </div>
       <div class="row bar">
-        <div class="col-md-1 blank-column"></div>
-        <div class="col-md-5">
-          <div class="copyright pull-left">Copyright @2015 NORTSEA | About NORTSEA | Contact Support</div>
+        <div class="col-md-2"></div>
+        <div class="col-md-4">
+          <div class="copyright">Copyright 2015 NORTSEA &nbsp;|&nbsp; About NORTSEA &nbsp;|&nbsp; Contact Support</div>
         </div>
         <div class="col-md-4">
           <div class="designer pull-right">Designed by Faith34</div>
