--- a/pages/03-contact.html
+++ b/pages/03-contact.html
@@ -64,53 +64,131 @@
           <p class="text-center desc-about-us"><strong><em>1300 Blvd Santa Monica, CA 24051 United States.</em></strong></p>
           <p class="text-center desc-about-us desc-about-content"><em>02563234234</em></p>
       </div>
-  </div>
-  <div class="row about-us-back black-space">
-    <div class="col-md-2"></div>
-    <div class="col-md-8"></div>
-    <div class="col-md-2"></div>
-  </div>
-  <main class="row info contact-feed">
-    <div class="col-md-4 contact_info">
-      <h3>Contact Info</h3>
-      <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-      <div class="row  info_list">
-         <div class="col-md-6 col1">
-           <p class="descrip">Address:</p>
-           <p class-"d-info">795 Fake Ave, Door 6<br>Wonderland, CA 90104, USA</p>
-           <p class="descrip">Phone & Fax:</p>
-           <p class-"d-info">+440 875369208<br>+440 353363114</p>
-         </div>
-         <div class="col-md-6 col2">
-           <p class="descrip">Email:</p>
-           <p class-"d-info">info@waxom.com<br>support@waxom.com</p>
-           <p class="descrip">Social Network:</p>
-           <a href="#" class="social-media-icons fa fa-facebook"></a>
-           <a href="#" class="social-media-icons-twitter fa fa-twitter"></a>
-           <a href="#" class="social-media-icons fa fa-dribbble"></a>
-           <a href="#" class="social-media-icons fa fa-instagram"></a>
+    </div>
+    <div class="row about-us-back black-space">
+      <div class="col-md-2"></div>
+      <div class="col-md-8"></div>
+      <div class="col-md-2"></div>
+    </div>
+    <main class="row info contact-feed">
+      <div class="col-md-4 contact-info">
+        <h3>Contact Info</h3>
+        <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <div class="row info-list">
+        <div class="col-md-6 col1">
+          <p class="descrip">Address:</p>
+          <p class-"d-info">795 Fake Ave, Door 6<br>Wonderland, CA 90104, USA</p>
+          <p class="descrip">Phone & Fax:</p>
+          <p class-"d-info">+440 875369208<br>+440 353363114</p>
+        </div>
+        <div class="col-md-6 col2">
+          <p class="descrip">Email:</p>
+          <p class-"d-info">info@waxom.com<br>support@waxom.com</p>
+          <p class="descrip">Social Network:</p>
+          <a href="#" class="social-media-icons fa fa-facebook"></a>
+          <a href="#" class="social-media-icons-twitter fa fa-twitter"></a>
+          <a href="#" class="social-media-icons fa fa-dribbble"></a>
+          <a href="#" class="social-media-icons fa fa-instagram"></a>
         </div>
       </div>
+      </div>
+      <div class="col-md-4 feedback">
+      <h3>Feedback</h3>
+      <div class="form-group first-input">
+        <input class="name" placeholder="Your Name" type="text"></input>
+      </div>
+      <div class="form-group">
+        <input class="email" placeholder="Your Email Address" type="text"></input>
+      </div>
+      <div class="form-group">
+        <p><textarea name="message" type="text" placeholder="Your Message" rows="4"></textarea><p>
+      </div>
+      <button class= "btn btn-default">SEND MESSAGE</button>
+      <div class="empty-text col-md-8">
+        <p><textarea name="empty" type="text" rows="8"></textarea><p>
+      </div>
+    </main>
+    <!-- Footer -->
+    <footer>
+      <div class="row footer-top">
+      <div class="col-md-2"></div>
+        <div class="col-md-2 about">
+          <h4>NortSea About</h4>
+          <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nos trud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+          <a class="text" href="#">Read More  <i class="fa fa-caret-right"></i></a>
+        </div>
+        <div class="col-md-2 hotel">
+          <h4>NortSea Hotel</h4>
+          <ul class="footer-col2-list">
+            <li><a class="text" href="../pages/02-about-us.html">About Us</a></li>
+            <li><a class="text" href="../pages/09-services.html">Services</a></li>
+            <li><a class="text" href="../pages/03-contact.html">Contact</a></li>
+          </ul>
+        </div>
+        <div class="col-md-2 contact-us">
+          <h4>Contact Us</h4>
+          <div class="row address">
+            <div class="col-md-1 icon">
+              <p><i class="fa fa-map-marker" aria-hidden="true"></i></p>
+            </div>
+            <div class="col-md-2 contact-type">
+              <p href="#">Address:</p>
+            </div>
+            <div class="col-md-7 information">
+              <p href="#">1100 Pico Blvd<br>Santa Monica, CA 90405<br>United States</p>
+            </div>
+          </div>
+          <div><p class="border-line"></p></div>
+          <div class="row phone">
+            <div class="col-md-1 icon">
+              <p><i class="fa fa-phone" aria-hidden="true"></i></p>
+            </div>
+            <div class="col-md-2 contact-type">
+              <p href="#">Phone:</p>
+            </div>
+            <div class="col-md-7 information">
+              <p href="#">+4401233123208</p>
+            </div>
+          </div>
+          <div><p class="border-line"></p></div>
+          <div class="row email">
+            <div class="col-md-1 icon">
+              <p><i class="fa fa-send" aria-hidden="true"></i></p>
+            </div>
+            <div class="col-md-2 contact-type">
+              <p href="#">Email:</p>
+            </div>
+            <div class="col-md-7 information">
+              <p href="#">support@nortsea.com</p>
+            </div>
+          </div>
+          <div><p class="border-line"></p></div>
+          <div class="row gps">
+            <div class="col-md-1 icon">
+              <p><i class="fa fa-compass" aria-hidden="true"></i></p>
+            </div>
+            <div class="col-md-2 contact-type">
+              <p class="contact-type" href="#">GPS:</p>
+            </div>
+            <div class="col-md-8 information">
+              <p href="#">10.021211-118.469009</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-2 logo">
+          <img class="center-block" src="assets/logo-footer_360.png"></img>
+        </div>
+      </div>
+      <div class="row bar">
+        <div class="col-md-2"></div>
+        <div class="col-md-4">
+          <div class="copyright">Copyright 2015 NORTSEA &nbsp;|&nbsp; About NORTSEA &nbsp;|&nbsp; Contact Support</div>
+        </div>
+        <div class="col-md-4">
+          <div class="designer pull-right">Designed by Faith34</div>
+        </div>
+      </div>
+    </footer>
   </div>
-    <div class="col-md-4 feedback">
-   <h3>Feedback</h3>
-   <div class="form-group first-input">
-      <input class="name" placeholder="Your Name" type="text"></input>
-   </div>
-   <div class="form-group">
-      <input class="email" placeholder="Your Email Address" type="text"></input>
-   </div>
-   <div class="form-group">
-      <p><textarea name="message" type="text" placeholder="Your Message" rows="4"></textarea><p>
-   </div>
-   <button class= "btn btn-default">SEND MESSAGE</button>
- </div>
-</div>
-    <div class="empty-text col-md-8">
-      <p><textarea name="empty" type="text" rows="8"></textarea><p>
-    </div>
-</main>
-
 </body>
 </html>
