01-About Hotel module - reset page margins, resized cards, reformatted text - do not look at NAP on this commit

--- a/index.html
+++ b/index.html
@@ -197,128 +197,128 @@
     </div>
     <!-- About Hotel -->
     <div class="row">
+      <div class="col-md-2"></div>
       <div class="col-md-12 about-hotel">
         <p class="text-center about-hotel-title">About Hotel</p>
       <div class="row">
-        <div class="col-md-offset-2 col-md-8 col-med-offset-2">
+        <div class="col-md-2"></div>
+        <div class="col-md-8 col-med-offset-2">
           <p class="text-center about-home-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
         </div>
       </div>
       </div>
     </div>
     <div class="row">
-      <div class="col-md-1 padding"></div>
-      <div class="col-md-3 box">
-        <p class="text-center box-title"><strong>RESTURANTS & BANQUETS</strong></p>
-        <p class="text-center box-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do.</p>
+      <div class="col-md-2"></div>
+      <div class="col-md-2 box">
+        <p class="text-center box-title"><strong>RESTAURANT & BANQUETS</strong></p>
+        <p class="text-center box-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</p>
         <p class="text-center box-desc"><em>Read More<em>
           <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
         </p>
       </div>
-      <div class="col-md-3 box">
+      <div class="col-md-2 box">
         <p class="text-center box-title"><strong>ROOMS</strong></p>
-        <p class="text-center box-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do.</p>
+        <p class="text-center box-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</p>
         <p class="text-center box-desc"><em>Read More<em>
           <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
         </p>
       </div>
-      <div class="col-md-3 box">
+      <div class="col-md-2 box">
         <p class="text-center box-title"><strong>BAR</strong></p>
-        <p class="text-center box-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do.</p>
+        <p class="text-center box-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</p>
         <p class="text-center box-desc"><em>Read More<em>
           <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
         </p>
       </div>
-      <div class="col-md-1 padding"></div>
     </div>
     <div class="row">
-      <div class="col-md-1 padding"></div>
-      <div class="col-md-3 box">
+      <div class="col-md-2"></div>
+      <div class="col-md-2 box">
         <p class="text-center box-title"><strong>GYM</strong></p>
-        <p class="text-center box-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do.</p>
+        <p class="text-center box-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</p>
         <p class="text-center box-desc"><em>Read More<em>
           <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
         </p>
       </div>
-      <div class="col-md-3 box">
+      <div class="col-md-2 box">
         <p class="text-center box-title"><strong>SPA</strong></p>
-        <p class="text-center box-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do.</p>
+        <p class="text-center box-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</p>
         <p class="text-center box-desc"><em>Read More<em>
           <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
         </p>
       </div>
-      <div class="col-md-3 box">
+      <div class="col-md-2 box">
         <p class="text-center box-title"><strong>CAR PARKING</strong></p>
-        <p class="text-center box-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do.</p>
+        <p class="text-center box-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</p>
         <p class="text-center box-desc"><em>Read More<em>
           <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
         </p>
       </div>
-      <div class="col-md-1 padding"></div>
     </div>
     <!-- News, Announcements, and Products -->
     <main class="row nap">
-      <div class="col-md-1 blank-nap"></div>
+      <div class="col-md-2"></div>
       <div class="col-md-5 box">
-          <p class="title">News<img class="img-responsive" src="assets/indicator-dots.png" align="right"></img></p>
-          <div class="row">
-            <div class="col-md-6 col1">
-              <img class="img-responsive" src="assets/Jan-29.png">
-            </div>
-            <div class="col-md-4 col2">
-              <p class="headln">Lorem ipsum dolor sit amet</p>
-              <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
-              <p class="read-more">Read More <i class="fa fa-caret-right"></i></p>
-            </div>
+        <h4 class="title">News<img class="img-responsive" src="assets/indicator-dots.png" align="right"></img></h4>
+        <div class="row">
+          <div class="col-md-6 col1">
+            <img class="img-responsive" src="assets/Jan-29.png">
           </div>
-          <div class="row">
-            <div class="col-md-6 col1">
-              <img class="img-responsive" src="assets/Feb-15.png">
-            </div>
-            <div class="col-md-4 col2">
-              <p class="headln">Lorem ipsum dolor sit amet</p>
-              <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
-              <p class="read-more">Read More <i class="fa fa-caret-right"></i></p>
-            </div>
+          <div class="col-md-6 col2">
+            <p class="headln">Lorem ipsum dolor sit amet</p>
+            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+            <p class="headln">Read More <i class="fa fa-caret-right"></i></p>
           </div>
-          <div class="row">
-            <div class="col-md-6 col1">
-              <img class="img-responsive" src="assets/Mar-2.png">
-            </div>
-            <div class="col-md-4 col2">
-              <p class="headln">Lorem ipsum dolor sit amet</p>
-              <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
-              <p class="read-more">Read More <i class="fa fa-caret-right"></i></p>
-            </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6 col1">
+            <img class="img-responsive" src="assets/Feb-15.png">
           </div>
-          <button class="btn-view-all btn-default btn-block" role="button">View All</button>
+          <div class="col-md-6 col2">
+            <p class="headln">Lorem ipsum dolor sit amet</p>
+            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+            <p class="headln">Read More <i class="fa fa-caret-right"></i></p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-6 col1">
+            <img class="img-responsive" src="assets/Mar-2.png">
+          </div>
+          <div class="col-md-6 col2">
+            <p class="headln">Lorem ipsum dolor sit amet</p>
+            <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt</p>
+            <p class="headln">Read More <i class="fa fa-caret-right"></i></p>
+          </div>
+        </div>
+        <button class="btn-view-all btn-default btn-block" role="button">View All</button>
       </div>
-      <div class="col-md-4">
-        <div class="row box">
+      <div class="col-md-3">
+        <div class="row apbox">
           <div class="col-md-12">
-           <p class="title">Announcements<img class="img-responsive" src="assets/indicator-dots.png" align="right"></img></p>
-           <p class="headln">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-           <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-           <p class="text">Read More <i class="fa fa-caret-right"></i></p>
-           <div class="border-line"></div>
-           <p class="headln">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
-           <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
-           <p class="read-more">Read More <i class="fa fa-caret-right"></i></p>
-         </div>
+            <h4 class="title">Announcements<img class="img-responsive" src="assets/indicator-dots.png" align="right"></img></h4>
+            <p class="headln">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+            <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+            <p class="headln">Read More <i class="fa fa-caret-right"></i></p>
+            <div class="border-line"></div>
+            <p class="headln">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor.</p>
+            <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna</p>
+            <p class="headln">Read More <i class="fa fa-caret-right"></i></p>
+          </div>
         </div>
         <div class="row box top-buffer">
-          <div class="col-md-7 products">
-            <p class="title">Products</p>
+          <div class="col-md-7">
+            <h4 class="title">Products</h4>
             <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod.</p>
-            <p class="read-more">Read More <i class="fa fa-caret-right"></i></a></p>
+            <p class="headln">Read More <i class="fa fa-caret-right"></i></a></p>
           </div>
-       </div>
-     </div>
-  </main>
+        </div>
+      </div>
+    </main>
   <!-- Footer -->
   <footer>
-    <div class="col-md-1 blank-column"></div>
     <div class="row footer-top">
+      <div class="col-md-2"></div>
       <div class="col-md-2 about">
         <h4>NortSea About</h4>
         <p><a class="text" href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nos trud exercitation ullamco laboris nisi ut aliquip ex ea commodo </a></p>
@@ -351,7 +351,7 @@
             <p><i class="fa fa-phone" aria-hidden="true"></i></p>
           </div>
           <div class="col-md-2 contact-type">
-            <p href="#">  Phone:</p>
+            <p href="#">Phone:</p>
           </div>
           <div class="col-md-7 information">
             <p href="#">+4401233123208</p>
@@ -363,7 +363,7 @@
             <p><i class="fa fa-send" aria-hidden="true"></i></p>
           </div>
           <div class="col-md-2 contact-type">
-            <p href="#">   Email:</p>
+            <p href="#">Email:</p>
           </div>
           <div class="col-md-7 information">
             <p href="#">support@nortsea.com</p>
@@ -388,8 +388,8 @@
     </div>
 
     <div class="row bar">
-      <div class="col-md-1 blank-column"></div>
-      <div class="col-md-5">
+      <div class="col-md-2"></div>
+      <div class="col-md-4">
         <div class="copyright pull-left">Copyright @2015 NORTSEA | About NORTSEA | Contact Support</div>
       </div>
       <div class="col-md-4">
