Update footer logo file path

--- a/pages/02-about-us.html
+++ b/pages/02-about-us.html
@@ -288,7 +288,7 @@
           </div>
         </div>
         <div class="col-md-2 logo">
-          <img class="center-block" src="assets/logo-footer_360.png"></img>
+          <img class="center-block" src="../assets/logo-footer_360.png"></img>
         </div>
       </div>
       <div class="row bar">
