--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <section class="row reservation-head">
       <div class="col-md-2 gutter"></div>
       <div class="col-md-1 hotel-column">
-        <i class="fa fa-building" aria-hidden="true"> Hotel</i>
+        <i class="fa fa-building" aria-hidden="true"> &nbspHotel</i>
       </div>
     </section>
     <section class="row reservation-content">
