add img-icon to add margin between reservation and icons. also add margin between about hotel and icons.

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       </div>
     </section>
     <!-- Logos -->
-    <div class="row">
+    <div class="row img-icon">
       <div class="col-md-2"></div>
       <div class="col-md-2">
         <img class="img-responsive center-block" src="assets/suitcase-icon.png">
