--- a/index.html
+++ b/index.html
@@ -44,9 +44,11 @@
       <!-- Summer-rates -->
       <section class="row summer-rates">
         <article class="col-md-6 col-md-offset-2">
-          <h1 class="h2 sale-banner">35% Sale</h1>
-          <h2 class="h1 rates-banner">YOU ENTER SUMMER WITH REFRESHING RATES</h2>
-          <button class="btn btn-default btn-lg explore-button">EXPLORE IT</button>
+          <div class="wrapper">
+            <h1 class="h2 sale-banner">35% Sale</h1>
+            <h2 class="h1 rates-banner">YOU ENTER SUMMER WITH REFRESHING RATES</h2>
+            <button class="btn btn-default btn-lg explore-button">EXPLORE IT</button>
+          </div>
           <img src="assets/indicator-dots.png" alt="Image carousel buttons" class="img-responsive carousel">
         </article>
         <aside class="col-md-2 summer-images">
@@ -56,84 +58,86 @@
         </aside>
       </section>
       <!-- Reservations -->
-      <section class="row header-section">
-        <div class="row" id="hotel-reservation-module">
-          <div class="row module-tab">
-            <div class="col-md-1">
-              <i class="fa fa-building" aria-hidden="true"> Hotel</i>
-            </div>
-          </div>
-        <div class="row module-content clearfix">
-          <div class="row" id="button-names">
-            <div class="col-md-1 resize"><span>Arrival</span></div>
-            <div class="col-md-1 resize"><span>Going</span></div>
-            <div class="col-md-2 resize"><span>Room</span></div>
-            <div class="col-md-2 resize"><span>Person</span></div>
-            <div class="col-md-2 resize"><span>Child</span></div>
-            <div class="col-md-2 resize"><span>Day</span></div>
-          </div>
-          <div class="row input-row">
-            <div class="col-md-1 arrival-input resize">
-              <input type="text" placeholder="16.07.2015"><span class="fa fa-calendar"></span>
-            </div>
-            <div class="col-md-1 going-input resize">
-              <input type="text" placeholder="16.07.2015"><span class="fa fa-calendar"></span>
-            </div>
-            <div class="col-md-2 room-btn resize">
-              <div class="btn-group">
-                <button type="button" class="btn">2</button>
-                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
-                  <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu" role="menu">
-                  <li><a href="#">1</a></li>
-                  <li><a href="#">3</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-md-2 person-btn resize">
-              <div class="btn-group">
-                <button type="button" class="btn">2</button>
-                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
-                  <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu" role="menu">
-                  <li><a href="#">1</a></li>
-                  <li><a href="#">3</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-md-2 child-btn resize">
-              <div class="btn-group">
-                <button type="button" class="btn">1</button>
-                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
-                  <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu" role="menu">
-                  <li><a href="#">2</a></li>
-                  <li><a href="#">3</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-md-2 day-btn resize">
-              <div class="btn-group">
-                <button type="button" class="btn">1</button>
-                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">
-                  <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu" role="menu">
-                  <li><a href="#">2</a></li>
-                  <li><a href="#">3</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="col-md-1">
-              <button class="btn btn-basic btn-md" name="button">SEARCH BOOK</button>
-            </div>
+      <section class="row reservation-head">
+        <div class="col-md-2 gutter"></div>
+        <div class="col-md-1 hotel-column">
+          <i class="fa fa-building" aria-hidden="true"> &nbspHotel</i>
+        </div>
+      </section>
+      <section class="row reservation-content">
+        <div class="col-md-2 gutter"></div>
+        <div class="col-md-1 arrival">
+          <p>Arrival</p>
+          <input type="text" class="input-box" placeholder="16.07.2015"><img class="fa-calendar" src="assets/calendar-icon.png">
+        </div>
+        <div class="col-md-1 going">
+          <p>Going</p>
+          <input type="text" class="input-box" placeholder="16.07.2015"><img class="fa-calendar" src="assets/calendar-icon.png">
+        </div>
+        <div class="col-md-1 room">
+          <p class="rm-align">Room</p>
+          <div class="btn-group-room">
+            <button type="button" class="btn btn-default">1</button>
+            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <span class="caret"></span>
+              <span class="sr-only">Toggle Dropdown</span>
+            </button>
+            <ul class="dropdown-menu">
+              <li><a href="#">2</a></li>
+              <li><a href="#">3</a></li>
+              <li><a href="#">4</a></li>
+            </ul>
           </div>
         </div>
-      </div>
-    </section>
+        <div class="col-md-1 person-box">
+          <p class="person-align">Person</p>
+          <div class="btn-group-person">
+            <button type="button" class="btn btn-default">1</button>
+            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <span class="caret"></span>
+              <span class="sr-only">Toggle Dropdown</span>
+            </button>
+            <ul class="dropdown-menu">
+              <li><a href="#">2</a></li>
+              <li><a href="#">3</a></li>
+              <li><a href="#">4</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-1 child-box">
+          <p class="child-align">Child</p>
+          <div class="btn-group-child">
+            <button type="button" class="btn btn-default">1</button>
+            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <span class="caret"></span>
+              <span class="sr-only">Toggle Dropdown</span>
+            </button>
+            <ul class="dropdown-menu">
+              <li><a href="#">2</a></li>
+              <li><a href="#">3</a></li>
+              <li><a href="#">4</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-1 day-box">
+          <p class="day-align">Day</p>
+          <div class="btn-group-day">
+            <button type="button" class="btn btn-default">1</button>
+            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <span class="caret"></span>
+              <span class="sr-only">Toggle Dropdown</span>
+            </button>
+            <ul class="dropdown-menu">
+              <li><a href="#">2</a></li>
+              <li><a href="#">3</a></li>
+              <li><a href="#">4</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-2 search-button">
+          <button class="btn btn-grey btn-sm" type="button">SEARCH BOOK</button>
+        </div>
+      </section>
     <!-- Logos -->
     <div class="row">
       <div class="col-md-2"></div>
@@ -196,65 +200,65 @@
       <div class="col-md-2"></div>
     </div>
     <!-- About Hotel -->
-    <div class="row hotel">
+    <div class="row">
+      <div class="col-md-2"></div>
       <div class="col-md-12 about-hotel">
         <p class="text-center about-hotel-title">About Hotel</p>
       <div class="row">
-        <div class="col-md-offset-2 col-md-8 col-med-offset-2">
+        <div class="col-md-2"></div>
+        <div class="col-md-8 col-med-offset-2">
           <p class="text-center about-home-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</p>
         </div>
       </div>
       </div>
     </div>
-    <div class="row hotel">
-      <div class="col-md-1 padding"></div>
-      <div class="col-md-3 box hotel">
-        <p class="text-center box-title"><strong>RESTURANTS & BANQUETS</strong></p>
-        <p class="text-center box-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do.</p>
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-2 hotel-box">
+        <p class="text-center box-title"><strong>RESTAURANT & BANQUETS</strong></p>
+        <p class="text-center box-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</p>
         <p class="text-center box-desc"><em>Read More<em>
           <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
         </p>
       </div>
-      <div class="col-md-3 box hotel">
+      <div class="col-md-2 hotel-box">
         <p class="text-center box-title"><strong>ROOMS</strong></p>
-        <p class="text-center box-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do.</p>
+        <p class="text-center box-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</p>
         <p class="text-center box-desc"><em>Read More<em>
           <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
         </p>
       </div>
-      <div class="col-md-3 box hotel">
+      <div class="col-md-2 hotel-box">
         <p class="text-center box-title"><strong>BAR</strong></p>
-        <p class="text-center box-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do.</p>
+        <p class="text-center box-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</p>
         <p class="text-center box-desc"><em>Read More<em>
           <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
         </p>
       </div>
-      <div class="col-md-1 padding"></div>
     </div>
-    <div class="row hotel">
-      <div class="col-md-1 padding"></div>
-      <div class="col-md-3 box hotel">
+    <div class="row">
+      <div class="col-md-2"></div>
+      <div class="col-md-2 hotel-box">
         <p class="text-center box-title"><strong>GYM</strong></p>
-        <p class="text-center box-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do.</p>
+        <p class="text-center box-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</p>
         <p class="text-center box-desc"><em>Read More<em>
           <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
         </p>
       </div>
-      <div class="col-md-3 box hotel">
+      <div class="col-md-2 hotel-box">
         <p class="text-center box-title"><strong>SPA</strong></p>
-        <p class="text-center box-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do.</p>
+        <p class="text-center box-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</p>
         <p class="text-center box-desc"><em>Read More<em>
           <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
         </p>
       </div>
-      <div class="col-md-3 box hotel">
+      <div class="col-md-2 hotel-box">
         <p class="text-center box-title"><strong>CAR PARKING</strong></p>
-        <p class="text-center box-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do.</p>
+        <p class="text-center box-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed</p>
         <p class="text-center box-desc"><em>Read More<em>
           <span class="glyphicon glyphicon-play" aria-hidden="true"></span>
         </p>
       </div>
-      <div class="col-md-1 padding"></div>
     </div>
     <!-- News, Announcements, and Products -->
     <main class="row nap">
