update footer to remove background from the row icons.

--- a/pages/04-gallery.html
+++ b/pages/04-gallery.html
@@ -149,9 +149,9 @@
       </div>
     </div>
     <!-- Footer -->
-    <footer>
-      <div class="row footer-top">
-      <div class="col-md-2"></div>
+    <footer class="footer-top">
+      <div class="row">
+      <div class="col-md-2 footer-gutter"></div>
         <div class="col-md-2 about">
           <h4>NortSea About</h4>
           <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nos trud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
@@ -218,15 +218,17 @@
         <div class="col-md-2 logo">
           <img class="center-block" src="../assets/logo-footer_360.png"></img>
         </div>
+        <div class="col-md-2 footer-gutter"></div>
       </div>
       <div class="row bar">
         <div class="col-md-2"></div>
         <div class="col-md-4">
-          <div class="copyright">Copyright 2015 NORTSEA &nbsp;|&nbsp; About NORTSEA &nbsp;|&nbsp; Contact Support</div>
+          <p class="copyright">Copyright 2015 NORTSEA &nbsp;|&nbsp; About NORTSEA &nbsp;|&nbsp; Contact Support</p>
         </div>
         <div class="col-md-4">
-          <div class="designer pull-right">Designed by Faith34</div>
+          <p class="designer pull-right">Designed by Faith34</p>
         </div>
+        <div class="col-md-2"></div>
       </div>
     </footer>
   </div>
