--- a/pages/05-products.html
+++ b/pages/05-products.html
@@ -165,15 +165,15 @@
         </div>
       </div>
     </div>
-    <!-- Footer -->
+    </div>
     <footer>
       <div class="row footer-top">
-      <div class="col-md-2"></div>
+      <div class="col-md-2 footer-gutter"></div>
         <div class="col-md-2 about">
           <h4>NortSea About</h4>
-          <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nos trud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
-          <a class="text" href="#">Read More  <i class="fa fa-caret-right"></i></a>
-        </div>
+            <p class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,quis nos trud exercitation ullamco laboris nisi ut aliquip ex ea commodo</p>
+            <a class="text" href="#">Read More  <i class="fa fa-caret-right"></i></a>
+          </div>
         <div class="col-md-2 hotel">
           <h4>NortSea Hotel</h4>
           <ul class="footer-col2-list">
@@ -246,6 +246,6 @@
         </div>
       </div>
     </footer>
-  </div> 
+  </div>
 </body>
 </html>
