--- a/pages/03-contact.html
+++ b/pages/03-contact.html
@@ -71,6 +71,7 @@
       <div class="col-md-2"></div>
     </div>
     <main class="row info contact-feed">
+      <div class="col-md-2"></div>
       <div class="col-md-4 contact-info">
         <h3>Contact Info</h3>
         <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
