Link to news page, final changes!

--- a/pages/06-news.html
+++ b/pages/06-news.html
@@ -55,6 +55,7 @@
         </div>
       </div>
     </div>
+    <!-- News Cards -->
     <div class="row one news-cards">
       <div class="col-md-2 t-box">
         <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img>
@@ -77,8 +78,6 @@
       <div class="col-md-2 t-box">
         <img src="../assets/06-news-card.png" class = "img-responsive" alt="Gray Rectangle"></img>
         <img src="../assets/play-btn.png" class="img-responsive press-play" alt="play-btn"></img>
-        <!-- <img src="../assets/about-us-img.png" class="img-responsive mtn-img"></img> -->
-        <!-- <a class="press-play" href="#"><span class="fa fa-play-circle"></span></a> -->
         <p class="hdline">Duis autem vel eum iriure dolor in henderit</p>
         <p class="date">Date: 05, June, 2015</p>
         <div class="border-line"></div>
