--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
             <p class="read-more">Read More <i class="fa fa-caret-right"></i></p>
           </div>
         </div>
-        <button class="btn-view-all btn-default btn-block" role="button">View All<i class="fa fa-angle-right"></i></button>
+        <a href="pages/07-news-detail.html"><button class="btn-view-all btn-default btn-block" role="button">View All<i class="fa fa-angle-right"></i></button></a>
       </div>
       <div class="col-md-3">
         <div class="row box">
