--- a/pages/05-products.html
+++ b/pages/05-products.html
@@ -37,7 +37,7 @@
             <li><a class="active" href="../pages/05-products.html">Products <span class="caret"></span></a></li>
             <li><a href="../pages/04-gallery.html">Gallery</a></li>
             <li><a href="../pages/03-contact.html">Contact</a></li>
-            <li><a href="#"><i class="fa fa-search" aria-hidden="true"></i></a></li>
+            <li><a href="javascript:void(0);"><i class="fa fa-search" aria-hidden="true"></i></a></li>
           </ul>
         </nav>
       </div>
