fix black-map-icon and update file path.

--- a/pages/02-about-us.html
+++ b/pages/02-about-us.html
@@ -73,7 +73,7 @@
         <img class="img-responsive center-block" src="../assets/suitcase-icon.png">
       </div>
       <div class="col-md-2">
-        <img class="img-responsive center-block" src="../assets/black-map-icon.png">
+        <img class="img-responsive center-block" src="../assets/Black-map-icon-fix.png">
       </div>
       <div class="col-md-2">
         <img class="img-responsive center-block" src="../assets/globe-icon.png">
