--- a/pages/02-about-us.html
+++ b/pages/02-about-us.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
-<body>
+<body background="../assets/background-texture.png">
   <div class="container-fluid">
     <!-- Header -->
     <header class="row" id="header-module">
