add javascript void to hashtags

--- a/pages/03-contact.html
+++ b/pages/03-contact.html
@@ -44,7 +44,7 @@
     </header>
     <!-- About Us -->
     <div class="row about-us-back">
-      <div class="col-md-1"></div>
+      <div class="col-md-2"></div>
       <div class="col-md-7">
         <h1 class="text-left left-title">Contact</h1>
       </div>
@@ -86,10 +86,10 @@
           <p class="descrip">Email:</p>
           <p class-"d-info">info@waxom.com<br>support@waxom.com</p>
           <p class="descrip">Social Network:</p>
-          <a href="#" class="social-media-icons fa fa-facebook"></a>
-          <a href="#" class="social-media-icons-twitter fa fa-twitter"></a>
-          <a href="#" class="social-media-icons fa fa-dribbble"></a>
-          <a href="#" class="social-media-icons fa fa-instagram"></a>
+          <a href="javascript:void(0)" class="social-media-icons fa fa-facebook"></a>
+          <a href="javascript:void(0)" class="social-media-icons-twitter fa fa-twitter"></a>
+          <a href="javascript:void(0)" class="social-media-icons fa fa-dribbble"></a>
+          <a href="javascript:void(0)" class="social-media-icons fa fa-instagram"></a>
         </div>
       </div>
       </div>
